# Velo

./: .gitignore  AGENTS.md  FOLDER_STRUCTURE.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.stellar/: manifest.json
benchmarks/: manifest.json  profiles.json  scenarios.json  schema.json
contracts/: README.md
contracts/pay_access/: Cargo.toml  README.md
contracts/pay_access/src/: errors.rs  events.rs  lib.rs  types.rs
contracts/pay_access/test_snapshots/: credit_consumption_rejects_invalid_amounts_and_overdrafts.1.json  inactive_project_activation_is_rejected.1.json  missing_project_activation_is_rejected.1.json  non_owner_activation_is_rejected.1.json  valid_project_activation_consumption_and_status_queries_work.1.json
contracts/pay_access/tests/: pay_access.rs
docs/: demo-setup.md  velo-master-context.md  velo-pay-checkout.md
observability/: alerts.yaml  docker-compose.yml  loki.yaml  otel-collector.yaml  prometheus.yaml  tempo.yaml
scripts/: benchmark-config.mjs  benchmark-contract.mjs  benchmark-dev-controller.mjs  benchmark-dev-controller.test.mjs  benchmark-gate-lib.mjs  benchmark-gate.mjs  benchmark-merge-lib.mjs  benchmark-merge.mjs  benchmark-report-lib.mjs  benchmark-report.mjs  benchmark-runner-lib.mjs  benchmark-s11.mjs  benchmark-sprint9.test.mjs  benchmark.mjs  benchmark.test.mjs  deploy-contracts.mjs  deploy-contracts.test.mjs  mock-controller.mjs  observability-assets.test.mjs  payment-api-smoke.mjs  payment-api-smoke.test.mjs  release-gate-lib.mjs  release-gate.mjs  release-gate.test.mjs  report-generator.mjs  sprint11.test.mjs  (+6 more)
(+223 files in other folders)
