[package]
name = "velo_pay_access"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = "25.0.1"

[dev-dependencies]
soroban-sdk = { version = "25.0.1", features = ["testutils"] }
velo_registry = { path = "../registry" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
